// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio.Group renders radio in group 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root FormControlLabel-root Radio-root Radio-label"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="Radio-uncheckedIcon"
            />
            <input
              class="PrivateSwitchBase-input"
              type="radio"
              value="VALUE+1"
            />
          </span>
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <span
            class="FormLabel-root FormLabel-inline"
          >
            <span
              class="FormLabel-text"
            >
              LABEL+1
            </span>
          </span>
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root FormControlLabel-root Radio-root Radio-label"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="Radio-uncheckedIcon"
            />
            <input
              class="PrivateSwitchBase-input"
              type="radio"
              value="VALUE+2"
            />
          </span>
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          <span
            class="FormLabel-root FormLabel-inline"
          >
            <span
              class="FormLabel-text"
            >
              LABEL+2
            </span>
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`disabled radio button renders disabled version 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      aria-disabled="true"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root PrivateSwitchBase-disabled Mui-disabled Radio-disabled Mui-disabled Mui-disabled"
      tabindex="-1"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="Radio-uncheckedIcon"
        />
        <input
          class="PrivateSwitchBase-input"
          disabled=""
          type="radio"
          value=""
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`radio button renders default radio button 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiRadio-root Radio-root"
    >
      <span
        class="MuiIconButton-label"
      >
        <div
          class="Radio-uncheckedIcon"
        />
        <input
          class="PrivateSwitchBase-input"
          type="radio"
          value=""
        />
      </span>
    </span>
  </div>
</div>
`;
